@@ -23,6 +23,7 @@ Changes in progress
 - Fixed bug with searching members or groups box (Trello #1216)
 - Grup-Classe: Added Email subscribers integration to Grup-Classe widget (GitHub #193)
 - Reactor: Added description link (Trello #1218)
+- intraweb-importer: Copy and update creation date of content. Import again deleted content
 
 
 Changes 16.03.30
